--- a/style.css
+++ b/style.css
@@ -2,3 +2,6 @@
   background-image: url("http://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Flag_of_South_Africa.svg/1280px-Flag_of_South_Africa.svg.png");
   background-size: cover;
 }
+h1 {
+    text-align: center;
+}
