--- a/style.css
+++ b/style.css
@@ -10,8 +10,4 @@ h1 {
 h4 {
     text-align: center;
 }
-
-IMG.displayed {
-    display: block;
-    margin-left: auto;
-    margin-right: auto }
+background-image: url("http://upload.wikimedia.org/wikipedia/commons/f/f4/Lord_Howe_Island_view_to_Admiralty_Islands.JPG");
