--- a/style.css
+++ b/style.css
@@ -10,4 +10,14 @@ h1 {
 h4 {
     text-align: center;
 }
+
+
+
+body{
+
+
 background-image: url("http://upload.wikimedia.org/wikipedia/commons/f/f4/Lord_Howe_Island_view_to_Admiralty_Islands.JPG");
+
+  
+  
+}
