--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
 
 
-background-image: url("http://upload.wikimedia.org/wikipedia/commons/f/f4/Lord_Howe_Island_view_to_Admiralty_Islands.JPG");
+background-image: url("WHY  dont you put something here you fucka");
 
   
   
