--- a/style.css
+++ b/style.css
@@ -1,14 +1,9 @@
 body{
 
 
-background-image: url("WHY  dont you put something here you fucka");
-
-  
-  
+background-image: url("http://www.charmingasiatours.com/wp-content/uploads/2013/07/SOUTH-AFRICA-Large-Sunset.jpg");
 }
-
-
-  .jumbotron{
+.jumbotron{
   background-image: url("http://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Flag_of_South_Africa.svg/1280px-Flag_of_South_Africa.svg.png");
   background-size: cover;
 }
