--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
 
 
-background-image: url("http://www.charmingasiatours.com/wp-content/uploads/2013/07/SOUTH-AFRICA-Large-Sunset.jpg");
+background-image: url("http://pds.exblog.jp/pds/1/200608/01/41/d0076741_12343917.jpg");
 }
 .jumbotron{
   background-image: url("http://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Flag_of_South_Africa.svg/1280px-Flag_of_South_Africa.svg.png");
