--- a/style.css
+++ b/style.css
@@ -1,7 +1,71 @@
 body{
 
-
 background-image: url("http://pds.exblog.jp/pds/1/200608/01/41/d0076741_12343917.jpg");
+nav {
+  background-color: #fff;
+  border: 5px solid #dedede;
+  border-radius: 5px;
+  box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.055);
+  color: #888;
+  display: block;
+  overflow: hidden;
+  width: 120%; 
+}
+
+  nav ul {
+    margin: 0;
+    padding: 10;
+  }
+
+    nav ul li {
+      display: inline-block;
+      list-style-type: none;
+      
+      -webkit-transition: all 0.2s;
+        -moz-transition: all 0.2s;
+        -ms-transition: all 0.2s;
+        -o-transition: all 0.2s;
+        transition: all 0.2s; 
+    }
+      
+      nav > ul > li > a >{
+        border-top: 4px solid #aaa;
+        border-right: 4px solid transparent;
+        border-left: 4px solid transparent;
+        content: "";
+        display: inline-block;
+        height: 0;
+        width: 0;
+        vertical-align: middle;
+  
+        -webkit-transition: color 0.1s linear;
+          -moz-transition: color 0.1s linear;
+        -o-transition: color 0.1s linear;
+          transition: color 0.1s linear; 
+      }
+
+      nav > ul > li > a {
+        color: #aaa;
+        display: block;
+        line-height: 45px;
+        padding: 0 24px;
+        text-decoration: none;
+      }
+
+        nav > ul > li:hover {
+          background-color: rgb( 40, 44, 47 );
+        }
+
+        nav > ul > li:hover > a {
+          color: rgb( 255, 255, 0);
+        }     
+
+        nav > ul > li:hover > div {
+          display: block;
+          opacity: 0.5;
+          visibility: visible;
+
+}
 }
 .jumbotron{
   background-image: url("http://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Flag_of_South_Africa.svg/1280px-Flag_of_South_Africa.svg.png");
