--- a/style.css
+++ b/style.css
@@ -21,4 +21,5 @@ h4 {
     border-radius: 10px;
 }
 
-
+<IMG class="displayed" src="//lh3.googleusercontent.com/qYfYahEoSWveCtmtCSfr10-nSo7OMx-bIYjQzbTz29ZWVcAjFk5XQ6yMNx8xpoMc3q2dYGIGNZgAjpH5_FQ5rDFyUNGtjR5UuNFDMFE5cA=s660"  
+style="width:304px;length:210px;">
