--- a/style.css
+++ b/style.css
@@ -16,7 +16,13 @@ h1 {
 h4 {
     text-align: center;
 }
-  
+
+IMG.displayed {
+    display: block;
+    margin-left: auto;
+    margin-right: auto 
+}
+
   div {
     border: 2px solid #0099CC;
     border-radius: 10px;
