--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ h4 {
     text-align: center;
 }
 
+btn {
+    text-align: center;
+}
+
 IMG {
     border: 2px solid #CCE680;
     border-radius: 10px;
