--- a/style.css
+++ b/style.css
@@ -9,6 +9,23 @@ background-image: url("http://pds.exblog.jp/pds/1/200608/01/41/d0076741_12343917
   background-size: cover;
 }
 
+h1 {		
+   text-align: center;		
+}		
+h4 {		
+    text-align: center;		
+}		
+	
+-IMG {		
+    border: 2px solid #CCE680;		
+   border-radius: 10px;		
+}		
+	
+IMG.displayed {		
+   display: block;		
+    margin-left: auto;		
+    margin-right: auto 		
+}		
 
 div {
   border: 2px solid #CCE680;
