--- a/style.css
+++ b/style.css
@@ -31,3 +31,19 @@ IMG.displayed {
   border: 2px solid #96BFE8;
   border-radius: 10px;
   }
+
+div {
+    text-align: justify;
+}
+
+div img {
+    display: inline-block;
+    width: 100px;
+    height: 100px;
+}
+
+div:after {
+    content: '';
+    display: inline-block;
+    width: 100%;
+}
