--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ div img {
     display: inline-block;
     width: 200px;
     height: 300px;
-    margin left: 20px;
+    right: 10px;
 }
 
 div:after {
