--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
 
-background-image: url("http://pds.exblog.jp/pds/1/200608/01/41/d0076741_12343917.jpg");
+background-image: url("http://pichost.me/1684012/");
 
 
 }
