--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
 
-background-image: url("http://pichost.me/1684012/");
+background-image: url("http://p1.pichost.me/i/45/1684012.jpg");
 
 
 }
