--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
 
-background-image: url("http://p1.pichost.me/i/45/1684012.jpg");
+background-image: url("http://orig05.deviantart.net/2e8a/f/2007/092/b/e/the_nature_of_south_africa_by_hmsdexter.jpg");
 
 
 }
