--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
 
-background-image: url("http://orig05.deviantart.net/2e8a/f/2007/092/b/e/the_nature_of_south_africa_by_hmsdexter.jpg");
-///#http://pds.exblog.jp/pds/1/200608/01/41/d0076741_12343917.jpg///#
+background-image: url("http://pds.exblog.jp/pds/1/200608/01/41/d0076741_12343917.jpg");
+///#http://orig05.deviantart.net/2e8a/f/2007/092/b/e/the_nature_of_south_africa_by_hmsdexter.jpg///#
 
 }
 .jumbotron{
