--- a/style.css
+++ b/style.css
@@ -1,14 +1,6 @@
 body{
-	
-html { 
-  background: url(http://pds.exblog.jp/pds/1/200608/01/41/d0076741_12343917.jpg) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
 
-
+background-image: url("http://pds.exblog.jp/pds/1/200608/01/41/d0076741_12343917.jpg");
 <!-- another backgroun we could use: http://orig05.deviantart.net/2e8a/f/2007/092/b/e/the_nature_of_south_africa_by_hmsdexter.jpg -->
 
 }
