--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ IMG {
 IMG.displayed {		
    display: block;		
     margin-left: auto;		
-    margin-right: auto 		
+    margin-right: auto; 		
 }		
 
 .potato {
