--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body{
 
-background-image: url("http://orig05.deviantart.net/2e8a/f/2007/092/b/e/the_nature_of_south_africa_by_hmsdexter.jpg");
+background-image: url("http://pds.exblog.jp/pds/1/200608/01/41/d0076741_12343917.jpg");
 background-size: cover;
-<!-- another backgroun we could use: http://pds.exblog.jp/pds/1/200608/01/41/d0076741_12343917.jpg -->
+<!-- another backgroun we could use: http://orig05.deviantart.net/2e8a/f/2007/092/b/e/the_nature_of_south_africa_by_hmsdexter.jpg -->
 
 }
 .jumbotron{
