--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ nav {
         color: #aaa;
         display: block;
         line-height: 45px;
-        padding: 24px;
+        padding: 0 24px;
         text-decoration: none;
       }
         nav > ul > li:hover {
