--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ nav {
 .jumbotron{
   background-image: url("http://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Flag_of_South_Africa.svg/1280px-Flag_of_South_Africa.svg.png");
   background-size: cover;
+  height:300px;
 }
 
 h1 {		
