--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ IMG {
    border-radius: 10px;		
 }		
 	
-IMG.displayed {		
+IMG {		
    display: block;		
     margin-left: auto;		
     margin-right: auto; 		
